sass/header-footer.scss
@import "variables";

.header {
    color: $grey;
    font-weight: bold;
    a {
      background: none !important;
        background-size: none !important;
        transition: none !important;
    }
}
footer {
    & > div {
        justify-content: space-evenly !important;
    }
    p {
        color: $grey;
        font-size: 25px !important;
    }
    p {
        margin-bottom: 0px;
    }
}

